storage/innobase/buf/buf0buf.cc
@@ -4334,7 +4334,7 @@ corrupt:
 				"InnoDB: space %lu file %s read of page %lu.\n"
 				"InnoDB: You may have to recover"
 				" from a backup.\n",
-				bpage->space,
+				(ulint)bpage->space,
 				space ? space->name : "NULL",
 				(ulong) bpage->offset);
 			buf_page_print(frame, buf_page_get_zip_size(bpage),
